# bmw-virtual-reader

./: .gitignore  Cargo.toml  README.md  build.ps1
src/: app.rs  config.rs  file_ops.rs  main.rs  types.rs  ucl_bindings.rs  ui.rs  xml_parser.rs
