[package]
name = "bmw_virtual_reader"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "bmw_virtual_reader"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
rfd = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
xml-rs = "0.8"
regex = "1.10"
libloading = "0.8"
webbrowser = "0.8"
num-format = "0.4"
libc = "0.2" 